--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,9 +1,15 @@
+// .home {
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	height: 100%;
+// 	img {
+// 		width: 70%;
+// 	}
+// }
 .home {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 100%;
-	img {
-		width: 70%;
-	}
+	width: 200px;
+	height: 500px;
+	position: relative;
+	background-color: pink;
 }
