--- a/src/components/Loading/index.less
+++ b/src/components/Loading/index.less
@@ -1,4 +1,14 @@
 /* 请求 Loading 样式 */
+.loadingWarp {
+	width: 100%;
+	height: 100vh;
+	z-index: 9999;
+	background: rgb(255 255 255 / 0.2);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .request-loading {
 	.ant-spin-text {
 		margin-top: 5px;
