--- a/src/App.less
+++ b/src/App.less
@@ -28,6 +28,12 @@
 	color: #61dafb;
 }
 
+:global {
+	.wrap1:nth-child(1) {
+		color: red;
+	}
+}
+
 @keyframes App-logo-spin {
 	from {
 		transform: rotate(0deg);
