--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -1,3 +1,14 @@
-.loading {
-	color: red;
-}
+// .loginContainer {
+// 	position: relative;
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	min-width: 550px;
+// 	width: 100%;
+// 	height: 1000px;
+// 	min-height: 500px;
+// 	background-image: url("../../assets/images/login_bg.svg");
+// 	background-position: 50%;
+// 	background-size: 100% 100%;
+// 	background-size: cover;
+// }
